--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 The goal of regexcite is to make regular expressions more exciting!
-It provides convenience functions to make some common tasks with string manipulation and regular expressions a bit easier.
+It provides convenience functions to make some common tasks with string manipulation, regular expressions and addition a bit easier.
 
 ## Installation
 
